--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts_react_webpack",
+  "name": "mui-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,13 +9,12 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^3.3.0",
+    "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
-    "connected-react-router": "^4.5.0",
     "dotenv-webpack": "^1.5.7",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   },
@@ -45,7 +44,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.prod.config.js --progress --profile --colors",
     "lint-fix": "tslint --fix -p tsconfig.json"
   },
   "author": "",
